1047001 : TPR-6654 : Distance Sort